--- a/01-general.html
+++ b/01-general.html
@@ -62,6 +62,7 @@
           </li>
         </ul>
         <br>
+
         <!-- Tab panes -->
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane active" id="search">
@@ -69,10 +70,12 @@
               <!-- Search -->
               <form>
                 <div class="col col-sm-10">
-                  <input class="form-control" type="text" placeholder="URI ou terme de recherche">
+                  <input class="form-control" type="text"
+                         placeholder="URI ou terme de recherche">
                 </div>
                 <div class="col col-sm-2">
-                  <input class="form-control btn btn-primary" type="button" value="Ok">
+                  <input class="form-control btn btn-primary" type="button"
+                         value="Ok">
                 </div>
               </form>
             </div>
@@ -84,9 +87,29 @@
 
               </div>
               <div class="col col-sm-2">
-                <input class="form-control btn btn-primary" type="button" value="Ok">
+                <input class="form-control btn btn-primary" type="button"
+                       value="Ok">
               </div>
             </form>
+          </div>
+        </div>
+
+        <!-- Search results -->
+        <div class="search-results">
+          <div class="search-results-item">
+            <h4>Jean-Marc </h4>
+            <div class="uri">http://mysuperdomain.com/uri.rdf#something</div>
+            <p></p>
+          </div>
+          <div class="search-results-item">
+            <h4>George Clooney</h4>
+            <div class="uri">http://mysuperdomain.com/uri.rdf#something</div>
+            <p></p>
+          </div>
+          <div class="search-results-item">
+            <h4>Leonardo Di Caprio</h4>
+            <div class="uri">http://mysuperdomain.com/uri.rdf#something</div>
+            <p></p>
           </div>
         </div>
       </div>
@@ -102,6 +125,7 @@
   <a href="#">Tools</a> /
   <a href="#">User manual</a> /
   <a href="#">Virtual Assembly</a> /
+  <a href="#">English version</a> /
   <a href="#">Github</a> / Powered by <a href="#"><b>Semantic Forms</b></a>
 </footer>
 </body>
