--- a/01-general.html
+++ b/01-general.html
@@ -50,22 +50,20 @@
           <input class="form-control" placeholder="MyPseudo" type="text">
           <label>Mot de passe</label>
           <div class="input-group">
-            <input class="form-control input-password" placeholder="Password" type="password">
+            <input class="form-control input-password" placeholder="Password"
+                   type="password">
             <span class="input-group-btn input-group-password">
               <button class="btn btn-default" type="button">
-                <span class="auth-see-password glyphicon glyphicon-eye-open" title="Voir le mot de passe"></span>
+                <span class="auth-see-password glyphicon glyphicon-eye-open"
+                      title="Voir le mot de passe"></span>
               </button>
             </span>
           </div>
           <br>
           <div class="row">
-            <div class="col col-sm-6">
-              <input class="form-control btn btn-password-forgot" type="button"
-                     value="Mot de passe oublié">
-            </div>
-            <div class="col col-sm-6">
+            <div class="col col-sm-6 col-sm-offset-6">
               <input class="form-control btn btn-primary" type="submit"
-                     value="Se connecter">
+                     value="Inscription">
             </div>
           </div>
         </form>
@@ -166,6 +164,36 @@
             </li>
           </ul>
         </nav>
+
+        <!-- Full result -->
+        <div class="result-full">
+          <div class="row">
+            <div class="col col-sm-2 result-field-label">Image</div>
+            <div class="col col-sm-10 result-field-content">
+              <img class="thumb" src="images/jmv.jpg"/>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col col-sm-2 result-field-label">Nom</div>
+            <div class="col col-sm-10 result-field-content">Vanel</div>
+          </div>
+          <div class="row">
+            <div class="col col-sm-2 result-field-label">Prénom</div>
+            <div class="col col-sm-10 result-field-content">Jean-Marc</div>
+          </div>
+          <div class="row">
+            <div class="col col-sm-2 result-field-label">Site Web</div>
+            <div class="col col-sm-10 result-field-content">http://jmvanel.free.fr</div>
+          </div>
+          <div class="row">
+            <div class="col col-sm-2 result-field-label">Téléphone</div>
+            <div class="col col-sm-10 result-field-content">tel:+33-689-162-952</div>
+          </div>
+          <div class="row">
+            <div class="col col-sm-2 result-field-label">Sujet d'intérêt</div>
+            <div class="col col-sm-10 result-field-content">Jazz</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
